Added forward search stack.